// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> / 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="film-card"
      >
        <div
          class="film-card__bg"
        >
          <img
            alt="testFilm1"
          />
        </div>
        <header
          class="page-header film-card__head"
        >
          <div
            class="logo"
          >
            <a
              class="logo__link "
              href="/"
            >
              <span
                class="logo__letter logo__letter--1"
              >
                W
              </span>
              <span
                class="logo__letter logo__letter--2"
              >
                T
              </span>
              <span
                class="logo__letter logo__letter--3"
              >
                W
              </span>
            </a>
          </div>
          <ul
            class="user-block"
          >
            <li
              class="user-block__item"
            >
              <div
                class="user-block__avatar"
              >
                <img
                  alt="User avatar"
                  height="63"
                  width="63"
                />
              </div>
            </li>
            <li
              class="user-block__item"
            >
              <a
                class="user-block__link"
                href="/"
              >
                Sign out
              </a>
            </li>
          </ul>
        </header>
        <div
          class="film-card__wrap"
        >
          <div
            class="film-card__info"
          >
            <div
              class="film-card__poster"
            >
              <img
                alt="testFilm1"
                height="327"
                width="218"
              />
            </div>
            <div
              class="film-card__desc"
            >
              <h2
                class="film-card__title"
              >
                testFilm1
              </h2>
              <p
                class="film-card__meta"
              >
                <span
                  class="film-card__genre"
                >
                  comedy
                </span>
                <span
                  class="film-card__year"
                />
              </p>
              <div
                class="film-card__buttons"
              >
                <a
                  class="btn btn--play film-card__button"
                  href="/player/1"
                >
                  <svg
                    height="19"
                    viewBox="0 0 19 19"
                    width="19"
                  >
                    <use
                      xlink:href="#play-s"
                    />
                  </svg>
                  <span>
                    Play
                  </span>
                </a>
                <button
                  class="btn btn--list film-card__button"
                  type="button"
                >
                  <svg
                    height="20"
                    viewBox="0 0 19 20"
                    width="19"
                  >
                    <use
                      xlink:href="#in-list"
                    />
                  </svg>
                  <span>
                    My list
                  </span>
                  <span
                    class="film-card__count"
                  >
                    0
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </section>
      <div
        class="page-content"
      >
        <section
          class="catalog"
        >
          <h2
            class="catalog__title visually-hidden"
          >
            Catalog
          </h2>
          <ul
            class="catalog__genres-list"
          >
            <li
              class="catalog__genres-item catalog__genres-item--active"
            >
              <a
                class="catalog__genres-link"
                href="/"
              >
                All genres
              </a>
            </li>
            <li
              class="catalog__genres-item"
            >
              <a
                class="catalog__genres-link"
                href="/"
              >
                comedy
              </a>
            </li>
          </ul>
          <div
            class="catalog__films-list"
          >
            <article
              class="small-film-card catalog__films-card"
            >
              <div
                class="small-film-card__image"
              >
                <video
                  height="175"
                  width="280"
                />
              </div>
              <h3
                class="small-film-card__title"
              >
                <a
                  class="small-film-card__link"
                  href="/films/1"
                >
                  testFilm1
                </a>
              </h3>
            </article>
            <article
              class="small-film-card catalog__films-card"
            >
              <div
                class="small-film-card__image"
              >
                <video
                  height="175"
                  width="280"
                />
              </div>
              <h3
                class="small-film-card__title"
              >
                <a
                  class="small-film-card__link"
                  href="/films/2"
                >
                  testFilm2
                </a>
              </h3>
            </article>
          </div>
        </section>
        <footer
          class="page-footer"
        >
          <div
            class="logo"
          >
            <a
              class="logo__link logo__link-light"
              href="/"
            >
              <span
                class="logo__letter logo__letter--1"
              >
                W
              </span>
              <span
                class="logo__letter logo__letter--2"
              >
                T
              </span>
              <span
                class="logo__letter logo__letter--3"
              >
                W
              </span>
            </a>
          </div>
          <div
            class="copyright"
          >
            <p>
              © 2023 What to watch Ltd.
            </p>
          </div>
        </footer>
      </div>
    </div>
  </body>,
  "container": <div>
    <section
      class="film-card"
    >
      <div
        class="film-card__bg"
      >
        <img
          alt="testFilm1"
        />
      </div>
      <header
        class="page-header film-card__head"
      >
        <div
          class="logo"
        >
          <a
            class="logo__link "
            href="/"
          >
            <span
              class="logo__letter logo__letter--1"
            >
              W
            </span>
            <span
              class="logo__letter logo__letter--2"
            >
              T
            </span>
            <span
              class="logo__letter logo__letter--3"
            >
              W
            </span>
          </a>
        </div>
        <ul
          class="user-block"
        >
          <li
            class="user-block__item"
          >
            <div
              class="user-block__avatar"
            >
              <img
                alt="User avatar"
                height="63"
                width="63"
              />
            </div>
          </li>
          <li
            class="user-block__item"
          >
            <a
              class="user-block__link"
              href="/"
            >
              Sign out
            </a>
          </li>
        </ul>
      </header>
      <div
        class="film-card__wrap"
      >
        <div
          class="film-card__info"
        >
          <div
            class="film-card__poster"
          >
            <img
              alt="testFilm1"
              height="327"
              width="218"
            />
          </div>
          <div
            class="film-card__desc"
          >
            <h2
              class="film-card__title"
            >
              testFilm1
            </h2>
            <p
              class="film-card__meta"
            >
              <span
                class="film-card__genre"
              >
                comedy
              </span>
              <span
                class="film-card__year"
              />
            </p>
            <div
              class="film-card__buttons"
            >
              <a
                class="btn btn--play film-card__button"
                href="/player/1"
              >
                <svg
                  height="19"
                  viewBox="0 0 19 19"
                  width="19"
                >
                  <use
                    xlink:href="#play-s"
                  />
                </svg>
                <span>
                  Play
                </span>
              </a>
              <button
                class="btn btn--list film-card__button"
                type="button"
              >
                <svg
                  height="20"
                  viewBox="0 0 19 20"
                  width="19"
                >
                  <use
                    xlink:href="#in-list"
                  />
                </svg>
                <span>
                  My list
                </span>
                <span
                  class="film-card__count"
                >
                  0
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      class="page-content"
    >
      <section
        class="catalog"
      >
        <h2
          class="catalog__title visually-hidden"
        >
          Catalog
        </h2>
        <ul
          class="catalog__genres-list"
        >
          <li
            class="catalog__genres-item catalog__genres-item--active"
          >
            <a
              class="catalog__genres-link"
              href="/"
            >
              All genres
            </a>
          </li>
          <li
            class="catalog__genres-item"
          >
            <a
              class="catalog__genres-link"
              href="/"
            >
              comedy
            </a>
          </li>
        </ul>
        <div
          class="catalog__films-list"
        >
          <article
            class="small-film-card catalog__films-card"
          >
            <div
              class="small-film-card__image"
            >
              <video
                height="175"
                width="280"
              />
            </div>
            <h3
              class="small-film-card__title"
            >
              <a
                class="small-film-card__link"
                href="/films/1"
              >
                testFilm1
              </a>
            </h3>
          </article>
          <article
            class="small-film-card catalog__films-card"
          >
            <div
              class="small-film-card__image"
            >
              <video
                height="175"
                width="280"
              />
            </div>
            <h3
              class="small-film-card__title"
            >
              <a
                class="small-film-card__link"
                href="/films/2"
              >
                testFilm2
              </a>
            </h3>
          </article>
        </div>
      </section>
      <footer
        class="page-footer"
      >
        <div
          class="logo"
        >
          <a
            class="logo__link logo__link-light"
            href="/"
          >
            <span
              class="logo__letter logo__letter--1"
            >
              W
            </span>
            <span
              class="logo__letter logo__letter--2"
            >
              T
            </span>
            <span
              class="logo__letter logo__letter--3"
            >
              W
            </span>
          </a>
        </div>
        <div
          class="copyright"
        >
          <p>
            © 2023 What to watch Ltd.
          </p>
        </div>
      </footer>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<App /> /mylist 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="user-page"
        >
          <header
            class="page-header user-page__head"
          >
            <div
              class="logo"
            >
              <a
                class="logo__link "
                href="/"
              >
                <span
                  class="logo__letter logo__letter--1"
                >
                  W
                </span>
                <span
                  class="logo__letter logo__letter--2"
                >
                  T
                </span>
                <span
                  class="logo__letter logo__letter--3"
                >
                  W
                </span>
              </a>
            </div>
            <h1
              class="page-title user-page__title"
            >
              My list 
              <span
                class="user-page__film-count"
              >
                0
              </span>
            </h1>
            <ul
              class="user-block"
            >
              <li
                class="user-block__item"
              >
                <div
                  class="user-block__avatar"
                >
                  <img
                    alt="User avatar"
                    height="63"
                    width="63"
                  />
                </div>
              </li>
              <li
                class="user-block__item"
              >
                <a
                  class="user-block__link"
                  href="/"
                >
                  Sign out
                </a>
              </li>
            </ul>
          </header>
          <section
            class="catalog"
          >
            <h2
              class="catalog__title visually-hidden"
            >
              Catalog
            </h2>
            <div
              class="catalog__films-list"
            />
          </section>
          <footer
            class="page-footer"
          >
            <div
              class="logo"
            >
              <a
                class="logo__link logo__link-light"
                href="/"
              >
                <span
                  class="logo__letter logo__letter--1"
                >
                  W
                </span>
                <span
                  class="logo__letter logo__letter--2"
                >
                  T
                </span>
                <span
                  class="logo__letter logo__letter--3"
                >
                  W
                </span>
              </a>
            </div>
            <div
              class="copyright"
            >
              <p>
                © 2023 What to watch Ltd.
              </p>
            </div>
          </footer>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="user-page"
      >
        <header
          class="page-header user-page__head"
        >
          <div
            class="logo"
          >
            <a
              class="logo__link "
              href="/"
            >
              <span
                class="logo__letter logo__letter--1"
              >
                W
              </span>
              <span
                class="logo__letter logo__letter--2"
              >
                T
              </span>
              <span
                class="logo__letter logo__letter--3"
              >
                W
              </span>
            </a>
          </div>
          <h1
            class="page-title user-page__title"
          >
            My list 
            <span
              class="user-page__film-count"
            >
              0
            </span>
          </h1>
          <ul
            class="user-block"
          >
            <li
              class="user-block__item"
            >
              <div
                class="user-block__avatar"
              >
                <img
                  alt="User avatar"
                  height="63"
                  width="63"
                />
              </div>
            </li>
            <li
              class="user-block__item"
            >
              <a
                class="user-block__link"
                href="/"
              >
                Sign out
              </a>
            </li>
          </ul>
        </header>
        <section
          class="catalog"
        >
          <h2
            class="catalog__title visually-hidden"
          >
            Catalog
          </h2>
          <div
            class="catalog__films-list"
          />
        </section>
        <footer
          class="page-footer"
        >
          <div
            class="logo"
          >
            <a
              class="logo__link logo__link-light"
              href="/"
            >
              <span
                class="logo__letter logo__letter--1"
              >
                W
              </span>
              <span
                class="logo__letter logo__letter--2"
              >
                T
              </span>
              <span
                class="logo__letter logo__letter--3"
              >
                W
              </span>
            </a>
          </div>
          <div
            class="copyright"
          >
            <p>
              © 2023 What to watch Ltd.
            </p>
          </div>
        </footer>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<App /> unknown router 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="user-page"
      >
        <header
          class="page-header user-page__head"
        >
          <div
            class="logo"
          >
            <a
              class="logo__link "
              href="/"
            >
              <span
                class="logo__letter logo__letter--1"
              >
                W
              </span>
              <span
                class="logo__letter logo__letter--2"
              >
                T
              </span>
              <span
                class="logo__letter logo__letter--3"
              >
                W
              </span>
            </a>
          </div>
          <h1
            class="page-title user-page__title"
          >
            Not Found
          </h1>
        </header>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="user-page"
    >
      <header
        class="page-header user-page__head"
      >
        <div
          class="logo"
        >
          <a
            class="logo__link "
            href="/"
          >
            <span
              class="logo__letter logo__letter--1"
            >
              W
            </span>
            <span
              class="logo__letter logo__letter--2"
            >
              T
            </span>
            <span
              class="logo__letter logo__letter--3"
            >
              W
            </span>
          </a>
        </div>
        <h1
          class="page-title user-page__title"
        >
          Not Found
        </h1>
      </header>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
